--- a/custom.css
+++ b/custom.css
@@ -5,7 +5,7 @@ p { font-family: 'arial'; }
 
 /*La couleur dominante*/
 .circle, .navbar, .frame { border-color: #00898E; }
-h1, h2, h3, h4, h5, h6, i, .item { color: #00898E; }
+h1, h2, h3, h4, h5, h6, i, .item { color: #643173; }
 
 /*Le fond de couleur*/
 /*Récupérer ces propriétés sur Ui Gradients: https://uigradients.com*/
