--- a/custom.css
+++ b/custom.css
@@ -4,7 +4,7 @@ h1, h2, h3, h4, h5, h6, i { font-family: 'Abril Fatface', cursive; }
 p { font-family: 'arial'; }
 
 /*La couleur dominante*/
-.circle, .navbar, .frame { border-color: #00898E; }
+.circle, .navbar, .frame { border-color: #643173; }
 h1, h2, h3, h4, h5, h6, i, .item { color: #643173; }
 
 /*Le fond de couleur*/
