--- a/custom.css
+++ b/custom.css
@@ -12,5 +12,5 @@ h1, h2, h3, h4, h5, h6, i, .item { color: #643173; }
 .bg-color {
   background: #74ebd5;
   background: -webkit-linear-gradient(to right, #ACB6E5, #74ebd5);
-  background: linear-gradient(to right, #ACB6E5, #74ebd5);
+  background: linear-gradient(to right, #FFC857, #643173);
 }
